# small_bimap

./: Cargo.toml  README.md
src/: error.rs  lib.rs  query.rs  string_index.rs  table.rs
