[package]
name = "small_bimap"
version = "0.1.0"
authors = ["Evan Chan <velvia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.2"
ahash = "*"
nested = "0.1"
num = "*"
regex = "1"
compressed_vec = "0.1"

# Needed for flamegraph and other perf profiling
[profile.release]
debug = true

